PCS BAckup 26Dec2023/Backup-Source/objects/Phoenix_NewProduct_WAC_Pricing_LineItems__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Approval_Grid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Grid</label>
        <referenceTo>Phoenix_Approval_Grid__c</referenceTo>
        <relationshipLabel>New Product WAC Pricing Line Items</relationshipLabel>
        <relationshipName>New_Product_WAC_Pricing_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Brand_WAC__c</fullName>
        <label>Brand WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Marketing_Head_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Marketing Head Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Marketing_Lead_OTC_Approva__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Marketing Lead OTC Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Marketing_Lead_Rx_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Marketing Lead Rx Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Marketing_Lead_SRx_Approva__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Marketing Lead SRx Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Status__c</fullName>
        <label>Final Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Rejection_Noti_All_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Rejection Noti sent all</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Lowest_Price__c</fullName>
        <label>Lowest Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Head_Approval__c</fullName>
        <label>Marketing Head Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Head_Comments__c</fullName>
        <label>Marketing Head Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Lead_OTC_Comments__c</fullName>
        <label>Marketing Lead OTC Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Lead_OTC__c</fullName>
        <label>Marketing Lead OTC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Lead_Rx_Comments__c</fullName>
        <label>Marketing Lead Rx Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Lead_Rx__c</fullName>
        <label>Marketing Lead Rx</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Lead_SRx_Comments__c</fullName>
        <label>Marketing Lead SRx Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Lead_SRx__c</fullName>
        <label>Marketing Lead SRx</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Note Approved</fullName>
                    <isActive>false</isActive>
                    <label>Note Approved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Material_Number__c</fullName>
        <label>Material Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_11__c</fullName>
        <label>NDC-11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_New_Product_WAC_Pricing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Product WAC Pricing</label>
        <referenceTo>New_Product_WAC_Pricing__c</referenceTo>
        <relationshipLabel>New Product WAC Pricing Line Items</relationshipLabel>
        <relationshipName>New_Product_WAC_Pricing_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Pkg_Size__c</fullName>
        <label>Pack Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>New Product WAC Pricing Line Items</relationshipLabel>
        <relationshipName>New_Product_WAC_Pricing_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_TPT_GM__c</fullName>
        <label>TPT % / GM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Updated_date__c</fullName>
        <label>Updated date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phoenix_Updated_in_Product_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated in Product Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC_Line_Item_Approval_Status__c</fullName>
        <label>WAC Line Item Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Supply Chain Pending</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed-Contracts</fullName>
                </value>
                <value>
                    <fullName>Closed-Country Head</fullName>
                </value>
                <value>
                    <fullName>Closed-Customer&apos;s Update</fullName>
                </value>
                <value>
                    <fullName>Closed-Customer Service</fullName>
                </value>
                <value>
                    <fullName>Closed-Draft</fullName>
                </value>
                <value>
                    <fullName>Closed-Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing &amp; Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Head</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Lead</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Lead SRx</fullName>
                </value>
                <value>
                    <fullName>Closed-Sales &amp; Marketing Head</fullName>
                </value>
                <value>
                    <fullName>Closed-SCM &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Closed-Sr Director or VP Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-SRx IPA Contracts Approver</fullName>
                </value>
                <value>
                    <fullName>Closed-Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Closed-Vistex Update</fullName>
                </value>
                <value>
                    <fullName>Contracts Pending</fullName>
                </value>
                <value>
                    <fullName>Contracts Rejected</fullName>
                </value>
                <value>
                    <fullName>Country Head Pending</fullName>
                </value>
                <value>
                    <fullName>Country Head Rejected</fullName>
                </value>
                <value>
                    <fullName>Customer&apos;s Update Pending</fullName>
                </value>
                <value>
                    <fullName>Customer&apos;s Update Rejected</fullName>
                </value>
                <value>
                    <fullName>Customer Service Pending</fullName>
                </value>
                <value>
                    <fullName>Customer Service Rejected</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Finance Pending</fullName>
                </value>
                <value>
                    <fullName>Finance Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_WAC__c</fullName>
        <label>WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>New Product WAC Pricing Line Item</label>
    <nameField>
        <displayFormat>WAC Pricing Line - {000000}</displayFormat>
        <label>New Product WAC Pricing Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Product WAC Pricing Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>